<resources>
    <string name="app_name">QUIZ APP</string>
    <string name="name">Name</string>
    <string name="jupiter">Jupiter</string>
    <string name="mercury">Mercury</string>
    <string name="south_africa">South Africa</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="everest">Everest</string>
    <string name="kilimanjaro">Kilimanjaro</string>
    <string name="mc_kinley">Mc Kinley</string>
    <string name="nanga_parbat">Nanga Parbat</string>
    <string name="nile">Nile</string>
    <string name="amazon">Amazon</string>
    <string name="niger">Niger</string>
    <string name="amur">Amur</string>
    <string name="australia">Australia</string>
    <string name="africa">Africa</string>
    <string name="america">America</string>
    <string name="india">India</string>
    <string name="kenya">Kenya</string>
    <string name="europe">Europe</string>
    <string name="denmark">Denmark</string>
    <string name="china">China</string>

    <string name="question1"> 1. Which is the first planet in the solar system?</string>
    <string name="question2"> 2. How many continents are there in the world?</string>
    <string name="question3">3. Name the country that has three  national capitals</string>
    <string name="question4"> 4. Which is the highest mountain in the world?</string>
    <string name="question5">5. Which is the longest river in the world?</string>
    <string name="question6"> 6. Which country has the largest population in the world</string>











</resources>